--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,17 +1,22 @@
 # ==================================== #
-# Kamon-Docker Reference Configuration #
+# Docker-Monitor Reference Configuration #
 # ==================================== #
 
 docker {
   host = "127.0.0.1"
+  host= ${?DOCKER_HOST}
   port = 2375
-  container-id = "ee5fa24a773b"
+  port = ${?DOCKER_PORT}
+  containers = [{"1faec0b493e0":"alias 1"},{"1faec0b493e0":"alias 2"}]
+  containers = ${?CONTAINERS}
 }
 
 kamon {
   statsd {
     subscriptions {
-      docker = ["**"]
+      docker-network  = ["**"]
+      docker-memory   = ["**"]
+      docker-cpu      = ["**"]
     }
   }
   modules {
