--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,11 +3,18 @@
 # ==================================== #
 
 docker {
+  # The Docker Host.
   host = "127.0.0.1"
   host= ${?DOCKER_HOST}
+
+  # The Docker TCP port.
   port = 2375
   port = ${?DOCKER_PORT}
-  containers = [{"1faec0b493e0":"alias 1"},{"1faec0b493e0":"alias 2"}]
+
+  # List of images that needs to be fetched.
+  # For convenience must provide an alias in order to facilitate the visualization
+  # [{"imageId","imageAlias"}]
+  containers = [{"image-id":"awesome-image"}]
   containers = ${?CONTAINERS}
 }
 
