clean application.conf

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,17 +5,14 @@
 docker {
   # The Docker Host.
   host = "127.0.0.1"
-  host= ${?DOCKER_HOST}
 
   # The Docker TCP port.
   port = 2375
-  port = ${?DOCKER_PORT}
 
   # List of images that needs to be fetched.
   # For convenience must provide an alias in order to facilitate the visualization
-  # [{"imageId","imageAlias"}]
-  containers = [{"image-id":"awesome-image"}]
-  containers = ${?CONTAINERS}
+  # [{"containerId","containerAlias"}]
+  containers = [{"containerId":"awesome-container"}]
 }
 
 kamon {
