--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,6 @@
-# ==================================== #
+# ====================================== #
 # Docker-Monitor Reference Configuration #
-# ==================================== #
+# ====================================== #
 
 docker {
   # The Docker Host.
@@ -9,10 +9,10 @@ docker {
   # The Docker TCP port.
   port = 2375
 
-  # List of images that needs to be fetched.
+  # List of images they need to be monitored.
   # For convenience must provide an alias in order to facilitate the visualization
-  # [{"containerId","containerAlias"}]
-  containers = [{"containerId":"awesome-container"}]
+  # [{"container-id","container-alias"}]
+  containers = [{"container-1":"awesome-container-1"}]
 }
 
 kamon {
