rename all before release

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,6 @@
-# ====================================== #
-# Docker-Monitor Reference Configuration #
-# ====================================== #
+# ================================#
+# Domino Reference Configuration  #
+# =============================== #
 
 docker {
   # The Docker Host.
